[Update 2018-06-05]
- Added Bone Hat in Electric Guitar (old normal) ID; [zoneSoldier/Kato];
- Issue #85: Added Wild Rider Card; [Kato]
- Issue #86: Added Red Eruma Card; [Kato]
- Issue #87: Added Siorava Card; [Kato]
- Issue #88: Added Parus Card; [Kato]
- Issue #89: Added Little Fatum Card; [Kato]
- Issue #63: Added Detale Card; [Kato]

[Update 2018-06-04]
- Fixed mobdb link to tRO's website; [Kato]
- Issue #4 Added all Evolved/New Pets(67) and fixed some old ones; [Kato]
- Issue #8 Fixed the behavior for the combo in Aditional Effects for exp, setted the default Base/Job EXP for 8x; [Kato]

[Update 2018-06-03]
- Fixed the delays, set all to 0.33 default, taken out the save in cookie; [Kato]
- Revamp in index.html, nixed the changelog, fixed html selects, indented the code (at least a little bit), fixed link to tRO's mobDB and etcetera; [Kato]
- #Issue #25 Added Lude Mask; [ZoneSoldier]
- #Issue #26 Added Xmas Rudolph Hairband; [ZoneSoldier]
- Fixed issue with Bayani Buwaya Skin Clothes stats Elemental resistances were set a 3% where as Website says 7%; [ZoneSoldier]
- #Issue #27 Added Xmas Snowman Hat; [ZoneSoldier]
- #Issue #28 Added Xmas Rudolph Santa Hat; [ZoneSoldier]
- #Issue #30 Added Legionnaire Hat; [ZoneSoldier]
- #Issue #38 Added Bakonawa Agimat Tattoo; [ZoneSoldier]
- #Issue #39 Added Bangungot Agimat Tattoo;[ZoneSoldier]
- #Issue 40 Added Cat Hand Glove; [ZoneSoldier]
- #Issue #41 Changed Name from Scarf Belt to Belcarf; [ZoneSoldier]
- #Issue #42 Added Bunch of Carnations; [ZoneSoldier]
- #Issue #43 Added Buwaya Agimat Tattoo; [ZoneSoldier]
- #Issue #69 Changed name for Gust of Wind to Book of Gust of Wind; [ZoneSoldier]
- Issue #71 Added End Sektura; [ZoneSoldier]
- Issue #72 Added Ygnus Stale; [ZoneSoldier]
- Issue #74 Added Ancient Dagger; [ZoneSoldier]
- Issue #75 Added Alchemy Glove; [Zonesoldier]