@@ -1602,52 +1602,52 @@ ItemOBJ = [
 ,[1559,8,0,130,3,2,50,50,"Red Square Bag","","If user's base Str is 90 or higher: Causes Stun effect to enemies by 5% chance.<BR>Every time you kill a monster, low chance to drop random Potion.",13,200,5244,20,5248,20,0]
 ,[1560,50,0,2,0,0,0,0,"Reforged Lord Kaho's Horns","","<br />Reforged Horns Of Lord Kaho. You feel a strange power emitting from them but they are not quite complete yet.",1,5,4,5,5,5,19,5,193,1,0]
 ,[1561,51,51,2,0,65,30,65,"Advanced Fin Helm","","Additional Maximum HP + 6 * Base Level.",13,300,0]
-,[1562,50,0,2,0,1,10,0,"Blue Pajamas Hat","","A cute blue pajama hat, very cuddly. Ensures a good night's rest, giving energy to chase your dreams.<br /><br />Increases damage by 5%. MATK + 5%.",17,5,89,5,0]
+,[1562,50,0,2,0,1,10,0,"Blue Pajamas Hat","","A cute blue pajama hat, very cuddly. Ensures a good night's rest, giving energy to chase your dreams.",17,5,89,5,0]
 ,[1563,50,0,2,0,1,10,0,"Pink Pajamas Hat","","A cute pink pajama hat, very cuddly. Ensures a good night's rest, giving energy to chase your dreams.",17,5,89,5,0]
 //Eden Gear
-,[1564,63,0,3,0,0,0,12,"Eden Group Boots I","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.<br />Impossible to refine this item.",75,10,76,2,0]
-,[1565,63,0,3,0,0,0,26,"Eden Group Boots II","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.<br />Impossible to refine this item.",75,12,76,4,0]
-,[1566,63,0,4,0,0,0,40,"Eden Group Boots III","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.<br />Impossible to refine this item.",75,14,76,6,0]
-,[1567,63,0,4,0,0,0,60,"Eden Group Boots IV","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.<br />Impossible to refine this item.",75,14,76,6,3,1,2,1,0]
-,[1568,10,0,82,2,0,0,26,"Eden Group Bow I","","A bow that is made by the Eden Group. It's been remodeled for beginning Archers.<br /><br />Impossible to refine this item.",0]
-,[1569,10,0,120,2,0,0,40,"Eden Group Bow II","","A rich bow that is made by the Eden Group. It is suitable for intermediates who have handled a bow before.<br /><br />Impossible to refine this item.",0]
-,[1570,10,0,140,3,0,0,60,"Eden Group Bow III","","A rich bow that is made by the Eden Group. It is suitable for advanced level adventurers who know how to handle a bow.<br /><br />Impossible to refine this item.",0]
-,[1571,1,0,124,2,0,0,26,"Eden Group Dagger I","","A practical dagger that is made by the Eden Group. This dagger is very useful for beginning adventurers.<br />Impossible to refine this item.",89,5,8,10,0]
-,[1572,1,0,158,2,0,0,40,"Eden Group Dagger II","","A practical dagger that is made by the Eden Group. It's suitable for an intermediate who has handled a dagger before.<br />Impossible to refine this item.",89,7,8,10,0]
-,[1573,1,0,165,3,0,0,60,"Eden Group Dagger III","","A practical dagger that is made by the Eden Group. It's suitable for those who have experience handling daggers.<br/>Impossible to refine this item.",89,10,8,10,0]
-,[1574,12,0,135,3,0,0,60,"Eden Group Dictonary I","","A book that is made by the Eden Group. It is suitable for those who have more advanced experience handling magic books.<br />Impossible to refine this item.",89,15,0]
-,[1575,14,0,150,3,0,0,60,"Eden Group Guitar I","","An instrument that is made by the Eden Group. It is suitable for those who have more advanced experience as Bards.<br />Impossible to refine this item.",0]
-,[1576,50,0,1,0,0,0,12,"Eden Group Hat","","A hat that is provided only for members of the Eden Group. It's designed to go well with a suit.<br />Impossible to refine this item.",0]
-,[1577,50,0,1,1,0,0,60,"Eden Group Hat II","","A hat that is provided only for members of the Eden Group. It's designed to go well with a suit.<br/><br/>When dealing physical damage there's a high chance that for 5 seconds you will gain ATK + 10.<br/><br/>When dealing magic damage there's a high chance that for 5 seconds you will gain MATK + 10.<br /><br />Impossible to refine this item.",0]
-,[1578,16,0,200,3,0,0,60,"Eden Group Huuma Shuriken I","","A Huuma Shuriken that is made by the Eden Group. It is suitable for experienced Ninjas only.<br />Impossible to refine this item.",89,15,,8,10,0]
-,[1579,12,0,155,3,0,0,60,"Eden Group Katar I","","A katar that is made by the Eden Group. It is suitable for those who have more advanced experience handling katars.<br />Impossible to refine this item.",10,5,8,10,0]
-,[1580,12,0,155,3,0,0,60,"Eden Group Knuckle I","","A claw that is made by the Eden Group. It is suitable for those who have more advanced experience as Champions.<br />Impossible to refine this item.",12,10,8,10,0]
-,[1581,8,0,142,2,0,0,26,"Eden Group Mace I","","A beginner's mace that is made exclusively by the Eden Group.<br /><br />Impossible to refine this item.",8,10,0]
-,[1582,8,0,163,2,0,0,40,"Eden Group Mace II","","A mace that is made by the Eden Group.<br /><br />Impossible to refine this item.",8,10,0]
-,[1583,8,0,172,3,0,0,60,"Eden Group Mace III","","A mace that is made by the Eden Group. It's suitable for an experienced mace wielder.<br />Impossible to refine this item.",8,10,0]
-,[1584,62,0,3,0,0,0,12,"Eden Group Manteau","","A manteau which is only for Eden Group members. It is designed to flatter anyone's backside.<br />Impossible to refine this item.",60,10,0]
-,[1585,62,0,4,0,0,0,60,"Eden Group Manteau II","","A manteau which is only for Eden Group members. It is designed to flatter anyone's backside.<br />Impossible to refine this item.",60,10,0]
-,[1586,17,0,40,2,0,0,26,"Eden Group Revolver I","","A revolver that is made by the Eden Group. This is easy for beginning Gunslingers to weild.<br />Impossible to refine this item.",8,-5,0]
-,[1587,17,0,60,2,0,0,40,"Eden Group Revolver II","","A revolver that is made by the Eden Group. It's suitable for an intermediate gun handler.<br />Impossible to refine this item.",8,-5,0]
-,[1588,17,0,76,3,0,0,60,"Eden Group Revolver III","","A revolver that is made by the Eden Group. It's suitable for an advanced gun handler.<br />Impossible to refine this item.",8,-5,0]
-,[1589,2,0,147,2,0,0,26,"Eden Group Saber I","","A one-handed sword that is made by the Eden Group. A weapon that can be used by anyone easily.<br />Impossible to refine this item.",8,10,0]
-,[1590,2,0,170,2,0,0,40,"Eden Group Saber II","","A one-handed sword that is made by the Eden Group. It's suitable for an intermediate sword handler.<br />Impossible to refine this item.",8,10,0]
-,[1591,2,0,185,3,0,0,60,"Eden Group Saber III","","A one-handed sword that is made by the Eden Group. It's suitable for an experienced sword handler.<br />Impossible to refine this item.",8,10,0]
-,[1592,3,0,162,2,0,0,26,"Eden Group Slayer I","","A Two-Handed Sword that is made by the Eden Group for a beginner Swordman.<br /><br />Impossible to refine this item.",8,10,0]
-,[1593,3,0,185,2,0,0,40,"Eden Group Slayer II","","A Two-Handed Sword that is made by the Eden Group. It is suitable for intermediates who have more experience handling Two-Handed Swords.<br />Impossible to refine this item.",8,10,0]
-,[1594,3,0,200,3,0,0,60,"Eden Group Slayer III","","A Two-Handed Sword that is made by the Eden Group. It is suitable for those who have more advanced experience handling Two-Handed Swords.<br />Impossible to refine this item.",8,10,0]
-,[1595,4,0,165,3,0,0,60,"Eden Group Spear I","","A spear that is made by the Eden Group. It is suitable for those who have more advanced experience handling spears.<br />Impossible to refine this item.",8,10,0]
-,[1596,9,0,60,2,0,0,26,"Eden Group Staff I","","A staff that is made by the Eden Group. A basic item for a beginning Mage.<br />Impossible to refine this item.",89,15,4,1,0]
-,[1597,9,0,60,2,0,0,40,"Eden Group Staff II","","A staff that is made by the Eden Group. A basic item for an intermediate Mage.<br />Impossible to refine this item.",89,15,4,2,0]
-,[1598,9,0,60,2,0,0,60,"Eden Group Staff III","","A staff that is made by the Eden Group. An advanced item for an experienced magic practitioner.<br />Impossible to refine this item.",89,16,4,3,0]
-,[1599,7,0,250,3,0,0,60,"Eden Group Two Handed Axe I","","An axe that is made by the Eden Group. It is suitable for those who have more advanced experience handling Two-Handed Axes.<br /><br />Impossible to refine this item.",8,10,0]
-,[1600,60,0,4,0,0,0,12,"Eden Group Uniform I","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.<br />Impossible to refine this item.",13,100,14,10,0]
-,[1601,60,0,6,0,0,0,26,"Eden Group Uniform II","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.<br />Impossible to refine this item.",13,200,14,20,0]
-,[1602,60,0,8,0,0,0,40,"Eden Group Uniform III","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.<br />Impossible to refine this item.",13,300,14,30,19,5,0]
-,[1603,60,0,10,0,0,0,60,"Eden Group Uniform IV","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.<br />Impossible to refine this item.",13,500,14,50,19,5,1,1,5,1,4,1,0]
-,[1604,15,0,150,3,0,0,60,"Eden Group Whip I","","A whip that is made by the Eden Group. It is suitable for those who have more advanced experience as Dancers.<br />Impossible to refine this item.",0]
+,[1564,63,0,3,0,0,0,12,"Eden Group Boots I","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.",75,10,76,2,193,1,0]
+,[1565,63,0,3,0,0,0,26,"Eden Group Boots II","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.",75,12,76,4,193,1,0]
+,[1566,63,0,4,0,0,0,40,"Eden Group Boots III","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.",75,14,76,6,193,1,0]
+,[1567,63,0,4,0,0,0,60,"Eden Group Boots IV","","Boots that are provided only for members of the Eden Group. These are designed to fit comfortably throughout long-walks.",75,14,76,6,3,1,2,1,193,1,0]
+,[1568,10,0,82,2,0,0,26,"Eden Group Bow I","","A bow that is made by the Eden Group. It's been remodeled for beginning Archers.",193,1,0]
+,[1569,10,0,120,2,0,0,40,"Eden Group Bow II","","A rich bow that is made by the Eden Group. It is suitable for intermediates who have handled a bow before.",193,1,0]
+,[1570,10,0,140,3,0,0,60,"Eden Group Bow III","","A rich bow that is made by the Eden Group. It is suitable for advanced level adventurers who know how to handle a bow.",193,1,0]
+,[1571,1,0,124,2,0,0,26,"Eden Group Dagger I","","A practical dagger that is made by the Eden Group. This dagger is very useful for beginning adventurers.",89,5,8,10,193,1,0]
+,[1572,1,0,158,2,0,0,40,"Eden Group Dagger II","","A practical dagger that is made by the Eden Group. It's suitable for an intermediate who has handled a dagger before.",89,7,8,10,193,1,0]
+,[1573,1,0,165,3,0,0,60,"Eden Group Dagger III","","A practical dagger that is made by the Eden Group. It's suitable for those who have experience handling daggers.",89,10,8,10,193,1,0]
+,[1574,12,0,135,3,0,0,60,"Eden Group Dictonary I","","A book that is made by the Eden Group. It is suitable for those who have more advanced experience handling magic books.",89,15,193,1,0]
+,[1575,14,0,150,3,0,0,60,"Eden Group Guitar I","","An instrument that is made by the Eden Group. It is suitable for those who have more advanced experience as Bards.",193,1,0]
+,[1576,50,0,1,0,0,0,12,"Eden Group Hat","","A hat that is provided only for members of the Eden Group. It's designed to go well with a suit.",193,1,0]
+,[1577,50,0,1,1,0,0,60,"Eden Group Hat II","","A hat that is provided only for members of the Eden Group. It's designed to go well with a suit.<br/><br/>When dealing physical damage there's a high chance that for 5 seconds you will gain ATK + 10.<br/><br/>When dealing magic damage there's a high chance that for 5 seconds you will gain MATK + 10.",193,1,0]
+,[1578,16,0,200,3,0,0,60,"Eden Group Huuma Shuriken I","","A Huuma Shuriken that is made by the Eden Group. It is suitable for experienced Ninjas only.",89,15,,8,10,193,1,0]
+,[1579,12,0,155,3,0,0,60,"Eden Group Katar I","","A katar that is made by the Eden Group. It is suitable for those who have more advanced experience handling katars.",10,5,8,10,193,1,0]
+,[1580,12,0,155,3,0,0,60,"Eden Group Knuckle I","","A claw that is made by the Eden Group. It is suitable for those who have more advanced experience as Champions.",12,10,8,10,193,1,0]
+,[1581,8,0,142,2,0,0,26,"Eden Group Mace I","","A beginner's mace that is made exclusively by the Eden Group.",8,10,193,1,0]
+,[1582,8,0,163,2,0,0,40,"Eden Group Mace II","","A mace that is made by the Eden Group.",8,10,193,1,0]
+,[1583,8,0,172,3,0,0,60,"Eden Group Mace III","","A mace that is made by the Eden Group. It's suitable for an experienced mace wielder.",8,10,193,1,0]
+,[1584,62,0,3,0,0,0,12,"Eden Group Manteau","","A manteau which is only for Eden Group members. It is designed to flatter anyone's backside.",60,10,193,1,0]
+,[1585,62,0,4,0,0,0,60,"Eden Group Manteau II","","A manteau which is only for Eden Group members. It is designed to flatter anyone's backside.",60,10,193,1,0]
+,[1586,17,0,40,2,0,0,26,"Eden Group Revolver I","","A revolver that is made by the Eden Group. This is easy for beginning Gunslingers to weild.",8,-5,193,1,0]
+,[1587,17,0,60,2,0,0,40,"Eden Group Revolver II","","A revolver that is made by the Eden Group. It's suitable for an intermediate gun handler.",8,-5,193,1,0]
+,[1588,17,0,76,3,0,0,60,"Eden Group Revolver III","","A revolver that is made by the Eden Group. It's suitable for an advanced gun handler.",8,-5,193,1,0]
+,[1589,2,0,147,2,0,0,26,"Eden Group Saber I","","A one-handed sword that is made by the Eden Group. A weapon that can be used by anyone easily.",8,10,193,1,0]
+,[1590,2,0,170,2,0,0,40,"Eden Group Saber II","","A one-handed sword that is made by the Eden Group. It's suitable for an intermediate sword handler.",8,10,193,1,0]
+,[1591,2,0,185,3,0,0,60,"Eden Group Saber III","","A one-handed sword that is made by the Eden Group. It's suitable for an experienced sword handler.",8,10,193,1,0]
+,[1592,3,0,162,2,0,0,26,"Eden Group Slayer I","","A Two-Handed Sword that is made by the Eden Group for a beginner Swordman.",8,10,193,1,0]
+,[1593,3,0,185,2,0,0,40,"Eden Group Slayer II","","A Two-Handed Sword that is made by the Eden Group. It is suitable for intermediates who have more experience handling Two-Handed Swords.",8,10,193,1,0]
+,[1594,3,0,200,3,0,0,60,"Eden Group Slayer III","","A Two-Handed Sword that is made by the Eden Group. It is suitable for those who have more advanced experience handling Two-Handed Swords.",8,10,193,1,0]
+,[1595,4,0,165,3,0,0,60,"Eden Group Spear I","","A spear that is made by the Eden Group. It is suitable for those who have more advanced experience handling spears.",8,10,193,1,0]
+,[1596,9,0,60,2,0,0,26,"Eden Group Staff I","","A staff that is made by the Eden Group. A basic item for a beginning Mage.",89,15,4,1,193,1,0]
+,[1597,9,0,60,2,0,0,40,"Eden Group Staff II","","A staff that is made by the Eden Group. A basic item for an intermediate Mage.",89,15,4,2,193,1,0]
+,[1598,9,0,60,2,0,0,60,"Eden Group Staff III","","A staff that is made by the Eden Group. An advanced item for an experienced magic practitioner.",89,16,4,3,193,1,0]
+,[1599,7,0,250,3,0,0,60,"Eden Group Two Handed Axe I","","An axe that is made by the Eden Group. It is suitable for those who have more advanced experience handling Two-Handed Axes.",8,10,193,1,0]
+,[1600,60,0,4,0,0,0,12,"Eden Group Uniform I","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.",13,100,14,10,193,1,0]
+,[1601,60,0,6,0,0,0,26,"Eden Group Uniform II","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.",13,200,14,20,193,1,0]
+,[1602,60,0,8,0,0,0,40,"Eden Group Uniform III","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.",13,300,14,30,19,5,193,1,0]
+,[1603,60,0,10,0,0,0,60,"Eden Group Uniform IV","","A suit that is only provided for members of the Eden Group. There are various sizes so tall people don't have to worry about it.",13,500,14,50,19,5,1,1,5,1,4,1,193,1,0]
+,[1604,15,0,150,3,0,0,60,"Eden Group Whip I","","A whip that is made by the Eden Group. It is suitable for those who have more advanced experience as Dancers.",193,1,0]
 //End of Eden Gear
-,[1605,50,0,2,0,1,0,10,"Entweihen Hairband","","It grows only on the top floor of the endless tower.<br/>This magic-filled hairband was made from the thorns.<br/><br/>[Refine Rate 5~10]<br/>For every refine, add +1% MATK.<br/><br/>When equipping [Entweihen Hairband]+[Dark Thorn Staff] at the same time:<br/>[Refine Rate 5~10 Dark Thorn Staff]<br/>For every 2 refines on the Dark Thorn Staff, add +10 MATK<br />Impossible to refine this item.",4,1,5,1,89,1,0]
+,[1605,62,0,2,0,0,40,95,"Loki's Muffler","","A red scarf worn out from long use.",2,1,1083,5,193,1,0]
 ,[1606,50,0,4,0,1,40,0,"Legionaire Hat","","It's feel like you're on the marching band just by wearing this hat.",1,1,80,3,0]
 ,[1607,51,0,2,0,1,50,50,"Lude Mask","","A mask which resembles a Lude. However, you will never be as awesome as a real Lude.",17,1,89,2,57,1,0]
 ,[1608,50,0,4,0,0,20,30,"Xmas Rudolph Hairband","","A Christmas hairband. Rudolf's excited mind for christmas is dwelled on it.<br/>You will feel like running faster.",1,3,5,2,6,3,2,3,12,5,0]
@@ -1662,8 +1662,8 @@ ItemOBJ = [
 ,[1617,7,1001,250,4,1,190,95,"Ygnus Stale","","A large axe made by a blacksmith from the fires of a volcano.<br>Chance of inflicting Bleeding status when dealing physical damage.<br>Risk of targeting yourself.",20,3,0]
 ,[1618,1,0,107,4,0,60,93,"Ancient Dagger","","A dagger used in ancient rituals, it feels as though it holds a mysterious power.<br>When dealing physical or magical damage there's a low chance to receive the Curse status.",89,10,14,100,76,5,0]
 ,[1619,64,0,1,0,1,10,93,"Alchemy Glove","","Magic gloves made for handling corrosive chemicals, smells a bit like charcoal.",4,1,19,2,343,10,221,127,351,25,0]
-,[1620,62,0,2,0,0,40,95,"Loki's Muffler","","<br>A red scarf worn out from long use.<br>Unrefineable",2,1,1083,5,0]
-,[]
+,[1620,50,0,2,0,1,0,10,"Entweihen Hairband","","It grows only on the top floor of the endless tower.<br/>This magic-filled hairband was made from the thorns.<br/>",4,1,5,1,89,1,0]
+,[1621,100,0,0,0,0,0,0,"Entweihen Hairband + Dark Thorn Staff","","<br/>[Refine Rate 5~10]<br/>For every refine, add +1% MATK.<br/><br/>When equipping [Entweihen Hairband]+[Dark Thorn Staff] at the same time:<br/>[Refine Rate 5~10 Dark Thorn Staff]<br/>For every 2 refines on the Dark Thorn Staff, add +10 MATK",0]
 ];
 
 //Test code for finding the values in Skill.js AutoSpellSkill
@@ -1992,7 +1992,7 @@ function Item_Setumei(nC1,nC2)
 			CBIstr += "Increase damage from [" + SizeOBJ[nC1-190] +"] size monsters by "+ (-1 * nC2) +"%<BR>";
 	}
 	if(193 == nC1)
-		CBIstr += "<Font color='#FF0000'>Unrefinable</Font><BR>";
+		CBIstr += "<br><Font color='#FF0000'>Unrefinable</Font><BR>";
 	if(194 == nC1)
 		CBIstr += "Cannot be broken<BR>";
 	if(195 == nC1)
@@ -2201,6 +2201,7 @@ w_SE = [[737,436,475,"NULL"]
 ,[1555,1553,1551,"NULL"] //[Custom TalonRO - 2018-06-02 -Aegir helm + cloak] [Kato]
 ,[1556,1553,1552,"NULL"] //[Custom TalonRO - 2018-06-02 -Aegir helm + armor] [Kato]
 ,[1557,1550,1551,1552,1553,"NULL"] //[Custom TalonRO - 2018-06-02 - All Aegir Set] [Kato]
+,[1621,1620,936,"NULL"] //[Custom TalonRo - 2018-06-02 - Entweihen Hairband + Dark Thorn Staff]
 ];
 SE_MAXnum = w_SE.length -1;
 for(var i=0;i<=SE_MAXnum;i++){
