@@ -6,6 +6,9 @@
 - Issue #88: Added Parus Card; [Kato]
 - Issue #89: Added Little Fatum Card; [Kato]
 - Issue #63: Added Detale Card; [Kato]
+- Issue #36: Added [Entweihen Hairband]+[Dark Thorn Staff] Combo with refine modifier; [ZoneSoldier]
+- Fixed all the "Unrefinable" descritions on Eden Items to show up as Red Font
+- 
 
 [Update 2018-06-04]
 - Fixed mobdb link to tRO's website; [Kato]
